# nora

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  check.py  codecov.yml  commitlint.config.cjs  compiler.rkt  logging.rkt  main.rkt  nora.code-workspace  requirements-dev.txt
.claude/: settings.json
.github/: FUNDING.yml  auto_assign.yml  dependabot.yml
.github/workflows/: clang-tidy.yml  claude-code-review.yml  codecov.yml  codeql.yml  commitlint.yml  format.yml  gen-expander.yml  lint-pr-title.yml  scan-build.yml  test.yml
docs/: expander-primitive-surface.md  value-model-abi.md  value-model-gc-migration.md
scripts/: check.in  compare_scan_build_reports.py  gen-expander.sh  nora-lit.in  norac.in  not.py
spike/r1-value-model/: .gitignore  README.md  nrt.cpp  nrt.h  spike.cpp
src/: AST.cpp  ASTRuntime.cpp  AnalysisFreeVars.cpp  CMakeLists.txt  Diagnostics.cpp  Environment.cpp  IdPool.cpp  Interpreter.cpp  Lex.cpp  Ops.td  Parse.cpp  Runtime.cpp  SourceStream.cpp  UTF8.cpp  Valueify.cpp  ast.cpp  dumper.cpp  environment.cpp  exprnode.cpp  idpool.cpp  interpreter.cpp  main.cpp  main.rkt  nora_rt.cpp  parse.cpp  runtime.cpp  valuenode.cpp
src/ast/: application.cpp  arithplus.cpp  begin.cpp  definevalues.cpp  identifier.cpp  ifcond.cpp  integer.cpp  lambda.cpp  letvalues.cpp  linklet.cpp  list.cpp  setbang.cpp  values.cpp
src/include/: AST.h  ASTRuntime.h  ASTVisitor.h  AST_fwd.h  AnalysisFreeVars.h  CMakeLists.txt  Casting.h  Diagnostics.h  Environment.h  IdPool.h  Interpreter.h  Lex.h  Parse.h  README.md  Runtime.h  SourceStream.h  UTF8.h  Value.h  Valueify.h  ast.h  ast_fwd.h  astnode.h  dumper.h  environment.h  exprnode.h  exprnode_inc.h  gc_alloc.h  idpool.h  interpreter.h  nora.h  nora_rt.h  parse.h  runtime.h  toplevelnode.h  toplevelnode_inc.h  valuenode.h  valuenode_inc.h
src/include/ast/: application.h  arithplus.h  begin.h  booleanliteral.h  definevalues.h  formal.h  identifier.h  ifcond.h  integer.h  lambda.h  letvalues.h  linklet.h  list.h  setbang.h  values.h  void.h
src/include/nir/: CMakeLists.txt  Dialect.h  MLIRGen.h  NirOps.td  Ops.td
src/include/utils/: downcast.h  idpool.h  overloaded.h  upcast.h
src/interpreter/: interpreter.cpp
src/mlir/: CMakeLists.txt  Dialect.cpp  MLIRGen.cpp  README.md  nir-opt.cpp  nora.cpp
src/mlirc/: README.md
src/parser/: parse.cpp
src/utils/: downcast.cpp  idpool.cpp  upcast.cpp
test/: CMakeLists.txt  const.rkt  hello-world.rkt  lit.cfg.py  lit.site.cfg.py.in  printf-two.rkt  two.rkt
test/integration/: CMakeLists.txt  application.rkt  application1.rkt  application2.rkt  arithmul.rkt  arithmul1.rkt  arithmul2.rkt  arithplus.rkt  arithsub.rkt  arithsub1.rkt  arithsub2.rkt  begin.rkt  begin0.rkt  box.rkt  case-lambda.rkt  case-lambda1.rkt  case-lambda2.rkt  case-lambda3.rkt  case-lambda4.rkt  char-glyph-list-read.rkt  char-glyph-read.rkt  char-nul-read.rkt  char-null-read.rkt  char-page-read.rkt  char-rubout-read.rkt  char-vtab-read.rkt  closure.rkt  const.rkt  define-values.rkt  define-values1.rkt  define-values2.rkt  error-arity.rkt  error-if.rkt  error-lambda.rkt  error-non-linklet.rkt  error-noncallable.rkt  error-plus-type.rkt  error-set-in-lambda.rkt  error-set-unbound.rkt  error-unbound.rkt  (+55 more)
test/lit/: lit.cfg.py  lit.site.cfg.py.in
test/mlir/: nir-roundtrip.mlir
test/unit/: CMakeLists.txt  test_gc.cpp  test_interpreter.cpp  test_main.cpp  test_parse.cpp
tools/: freevars.py
